Closed Bug 370957 Opened 19 years ago Closed 19 years ago

strsclnt doesn't support TLS_RSA_WITH_NULL_SHA

Categories

(NSS :: Tools, defect, P2)

3.11.4
defect

Tracking

(Not tracked)

RESOLVED FIXED
3.11.7

People

(Reporter: nelson, Assigned: nelson)

References

Details

Attachments

(1 file)

When I added support for TLS_RSA_WITH_NULL_SHA to NSS (bug 161529), I somehow overlooked strsclnt. I added the "z" cipher letter to tstclnt, selfserv and vfyserv, but not to strsclnt. That omission needs to be corrected. This omission is one of the causes of bug 367037 and bug 367133. Those bugs should be fixed first, before this one is fixed, so I am marking this bug as depending on those two. The fix for this bug will be the addition of one line to the array ssl3CipherSuites in strsclnt.c
No longer depends on: 367133
Attached patch one line patchSplinter Review
This should do it.
Assignee: nobody → nelson
Status: NEW → ASSIGNED
Attachment #258491 - Flags: superreview?(christophe.ravel.bugs)
Attachment #258491 - Flags: review?(slavomir.katuscak)
Attachment #258491 - Flags: review?(slavomir.katuscak) → review+
Attachment #258491 - Flags: superreview?(christophe.ravel.bugs) → superreview?(julien.pierre.boogz)
Attachment #258491 - Flags: superreview?(julien.pierre.boogz) → superreview+
Checking in strsclnt.c; new revision: 1.56; previous revision: 1.55 Checking in strsclnt.c; new revision: 1.43.2.9; previous revision: 1.43.2.8
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
Priority: -- → P2
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: